--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -147,7 +147,7 @@ header {
 header span.ribbon-inner {
   position: relative;
   display: block;
-  background-color: #cd596b;
+  background-color: #00596b;
   border: 4px solid #7c334f;
   padding: 2px;
   z-index: 1;
@@ -199,12 +199,12 @@ section#downloads,
 div#no-downloads {
   position: relative;
   display: block;
-  height: 197px;
-  width: 550px;
+  height: 500px;
+  width: 1024px;
   padding-bottom: 150px;
   margin: -80px auto -150px;
   z-index: 1;
-  background: transparent url(../images/bg-ramp.jpg) center 171px no-repeat;
+  background: transparent url(../images/color-crack-feature-graphic.jpg) center 171px no-repeat;
 }
 
 div#no-downloads span.inner {
@@ -212,6 +212,7 @@ div#no-downloads span.inner {
   position: relative;
   height: 197px;
   width: 550px;
+  padding-top: 200px;
   background: transparent url(../images/download-sprite.png) 0 0 no-repeat;
 }
 
@@ -286,7 +287,7 @@ footer {
 footer span.ribbon-outer {
   display: block;
   position: relative;
-  border-bottom: 2px solid #bdb6ad;
+  border-bottom: 2px solid #98b6ad;
 }
 
 footer span.ribbon-inner {
